[package]
name = "ray-cast-game"
version = "0.1.0"
authors = ["ZackJorquera <jorquerazack@gmail.com>"]
edition = "2018"
description = "A small simple ray-casted 3d (ish) game."
repository = "https://github.com/ZackJorquera/ray-cast-game"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.27.0"
image = "0.23.12"
